// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should be gorgeous 1`] = `
Object {
  "payload": Object {
    "tablename": undefined,
  },
  "type": "REMOVE_FROM_PINNED",
}

`;
exports[`actions should decrement should create decrement action 1`] = `
Object {
  "type": "DECREMENT_COUNTER",
}
`;

exports[`actions should increment should create increment action 1`] = `
Object {
  "type": "INCREMENT_COUNTER",
}
`;

